# socialfi-protocol

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  RETROSPECTIVE.md  TOOLS.md  docker-compose.yml
.github/workflows/: ci-web.yml  deploy-frontend.yml  deploy-github-pages.yml
blockchain/: README.md  chain_spec.json
blockchain/pallets/social-app-registry/: Cargo.toml
blockchain/pallets/social-app-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
blockchain/pallets/social-feeds/: Cargo.toml
blockchain/pallets/social-feeds/src/: benchmarking.rs  dev_key.rs  lib.rs  mock.rs  offchain.rs  tests.rs  types.rs  weights.rs
blockchain/pallets/social-graph/: Cargo.toml
blockchain/pallets/social-graph/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
blockchain/pallets/social-managers/: Cargo.toml
blockchain/pallets/social-managers/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
blockchain/pallets/social-profiles/: Cargo.toml
blockchain/pallets/social-profiles/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
blockchain/pallets/sponsorship/: Cargo.toml
blockchain/pallets/sponsorship/src/: benchmarking.rs  extension.rs  lib.rs  mock.rs  tests.rs  weights.rs
blockchain/pallets/template/src/: weights.rs
blockchain/primitives/social-notifications/: Cargo.toml
blockchain/primitives/social-notifications/src/: lib.rs
blockchain/runtime/: Cargo.toml  README.md
blockchain/runtime/src/: benchmarks.rs  genesis_config_presets.rs  lib.rs
blockchain/runtime/src/configs/: mod.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/commands/: chain.rs  contract.rs  mod.rs  pallet.rs  prove.rs
contracts/evm/: package-lock.json  pnpm-lock.yaml
contracts/evm/test/: ProofOfExistence.test.ts
contracts/pvm/: package-lock.json  pnpm-lock.yaml
contracts/pvm/test/: ProofOfExistence.test.ts
docs/: ARCHITECTURE_OVERVIEW.md  DEPLOYMENT.md  ENCRYPTED_POSTS.md  ENCRYPTED_POSTS_WORKFLOW.md  FLOWS.md  INSTALL.md  LENS_INSPIRED_FEATURES.md  NOTIFICATIONS_ARCHITECTURE.md  NOTIFICATIONS_FLOW.md  NOTIFICATIONS_TOPICS.md  PRESENTATION.md  PRESENTATION_NOTES.md  TOOLS.md
indexer/: data.json  package.json  pnpm-lock.yaml
indexer/src/: api.ts  db.ts  index.ts  indexer.ts
scripts/: README.md  common.sh  deploy-local.sh  deploy-with-tunnel.sh  download-sdk-binaries.sh  start-all.sh  start-dev-with-contracts.sh  start-dev.sh  start-indexer.sh  start-local.sh
web/: .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  verify-encrypted-ipfs.mjs  verify-encrypted-ipfs.ts  verify-unlock-state.mjs  vite.config.ts
web/.papi/: polkadot-api.json
web/.papi/descriptors/: generated.json  package.json
web/.papi/metadata/: stack_template.scale
web/src/: App.tsx  index.css  main.tsx
web/src/components/: ContractProofOfExistencePage.tsx  FileDropZone.tsx
web/src/components/social/: AccountSelector.tsx  AddressDisplay.tsx  AppForm.tsx  AuthorDisplay.tsx  AuthorFeedSection.tsx  ConfirmModal.tsx  FeeRangeInput.tsx  IdentityBadge.tsx  IdentityPanel.tsx  NotificationsBell.tsx  ProfileCard.tsx  ProfileForm.tsx  RequireProfile.tsx  RequireWallet.tsx  SponsorshipPanel.tsx  StatCard.tsx  ThemeToggle.tsx  TxStatusBanner.tsx  TxToast.tsx  VerificationBadge.tsx  VerifiedBadge.tsx
web/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  SectionHeading.tsx  Skeleton.tsx  StatTile.tsx  cn.ts  index.ts
web/src/config/: network.ts
web/src/hooks/: useAccount.ts  useConnection.ts  useStatementStore.ts  useTheme.ts
web/src/hooks/social/: useEncryptedPosts.ts  useIdentity.ts  useIpfs.ts  useManagers.ts  useModeration.ts  useNotifications.ts  useProfileCache.ts  useProfileGate.ts  useSelectedAccount.ts  useSocialApi.ts  useSponsorship.ts  useTxStatus.ts  useTxTracker.ts  useWallet.ts
web/src/pages/: AccountsPage.tsx  HomePage.tsx  PalletPage.tsx  PeoplePage.tsx  ProtocolStatsPage.tsx
web/src/pages/social/: AccountsPage.tsx  ActAsPage.tsx  AppDetailPage.tsx  AppsPage.tsx  CreateProfilePage.tsx  EditProfilePage.tsx  FeedPage.tsx  GraphPage.tsx  ManagersPage.tsx  PeopleIdentityPage.tsx  PostDetailPage.tsx  ProfilePage.tsx  PublicProfilePage.tsx  SocialDashboard.tsx  SocialLayout.tsx  SponsorshipPage.tsx  TransactionsPage.tsx
web/src/store/: chainStore.ts
web/src/utils/: format.ts  postCrypto.ts
