[workspace]
resolver = "2"
members = [
	"blockchain/runtime",
	"blockchain/primitives/social-notifications",
	"blockchain/pallets/template",
	"blockchain/pallets/social-app-registry",
	"blockchain/pallets/social-profiles",
	"blockchain/pallets/social-graph",
	"blockchain/pallets/social-feeds",
	"blockchain/pallets/social-managers",
	"blockchain/pallets/sponsorship",
	"cli",
]

[workspace.package]
license = "MIT"
authors = ["Polkadot Stack Template Contributors"]
homepage = "https://github.com/parity-Asia/polkadot-stack-template"
repository = "https://github.com/parity-Asia/polkadot-stack-template.git"
edition = "2021"

[workspace.dependencies]
# Local crates
pallet-template = { path = "./blockchain/pallets/template", default-features = false }
pallet-social-app-registry = { path = "./blockchain/pallets/social-app-registry", default-features = false }
pallet-social-profiles = { path = "./blockchain/pallets/social-profiles", default-features = false }
pallet-social-graph = { path = "./blockchain/pallets/social-graph", default-features = false }
pallet-social-feeds = { path = "./blockchain/pallets/social-feeds", default-features = false }
pallet-social-managers = { path = "./blockchain/pallets/social-managers", default-features = false }
pallet-sponsorship = { path = "./blockchain/pallets/sponsorship", default-features = false }
social-notifications-primitives = { path = "./blockchain/primitives/social-notifications", default-features = false }

# Common dependencies
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
docify = { version = "0.2.9" }
hex-literal = { version = "0.4.1", default-features = false }
log = { version = "0.4.22", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde = { version = "1.0.214", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.13.1", default-features = false }

# Polkadot SDK
polkadot-sdk = { version = "2512.3.3", default-features = false }
cumulus-pallet-parachain-system = { version = "0.25.0", default-features = false }
substrate-wasm-builder = { version = "31.1.0" }

# FRAME (experimental umbrella crate - used by pallets)
frame = { version = "0.14.0", default-features = false, package = "polkadot-sdk-frame" }

# Used by pallet dev-deps
sp-core = { version = "39.0.0" }
sp-io = { version = "44.0.0", default-features = false }
sp-statement-store = { version = "24.0.0", default-features = false }

# CLI dependencies
subxt = { version = "0.38" }
subxt-signer = { version = "0.38", features = ["sr25519", "subxt"] }
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.8", features = ["contract", "provider-http", "signer-local"] }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
