[package]
name = "pallet-social-app-registry"
description = "A SocialFi app registry pallet — permissionless registration of social apps that consume shared primitives."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }

[dev-dependencies]
frame = { workspace = true, features = ["std", "experimental", "runtime"] }
polkadot-sdk = { workspace = true, default-features = true, features = ["pallet-balances", "std"] }
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
]
try-runtime = [
	"frame/try-runtime",
]
