[package]
name = "pallet-social-graph"
description = "Global social graph pallet — follow/unfollow relationships with paid follows."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
pallet-social-profiles = { workspace = true, default-features = false }
scale-info = { features = ["derive"], workspace = true }
social-notifications-primitives = { workspace = true, default-features = false }

[dev-dependencies]
frame = { workspace = true, features = ["std", "experimental", "runtime"] }
polkadot-sdk = { workspace = true, default-features = true, features = ["pallet-balances", "std"] }
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame/std",
	"pallet-social-profiles/std",
	"scale-info/std",
	"social-notifications-primitives/std",
]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
	"pallet-social-profiles/runtime-benchmarks",
]
try-runtime = [
	"frame/try-runtime",
	"pallet-social-profiles/try-runtime",
]
