[package]
name = "social-notifications-primitives"
description = "Shared helpers to build Statement Store notifications for the SocialFi pallets (topics, payloads, statement construction)."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-statement-store = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-statement-store/std",
	"sp-io/std",
]
